test/classes/nilability/error-casting-from-nil.chpl
class MyClass { var x: int; }

proc main() {
  var a: unmanaged MyClass = nil:unmanaged MyClass;
}
